--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
      crossorigin="anonymous"></script>
 </head>
 <body>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1576927028314389"
+     crossorigin="anonymous"></script>
+<!-- 広告0 -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-1576927028314389"
+     data-ad-slot="2282838352"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <h1>これがヘッダー１のサイズ感</h1>
     <p>これがただ文字、数秒でとりあえずこんな感じでサイト公開できます</p>
 </body>
