--- a/index.html
+++ b/index.html
@@ -5,6 +5,56 @@
     <title>Githubもっと使えるようになりたい</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1576927028314389"
      crossorigin="anonymous"></script>
+    <style>
+    body {
+      font-family: sans-serif;
+      padding: 1em;
+      font-size: 16px;
+      line-height: 1.6;
+    }
+    label {
+      display: block;
+      margin-top: 1em;
+      font-weight: bold;
+    }
+    input, select, button {
+      width: 100%;
+      padding: 0.5em;
+      margin-top: 0.3em;
+      font-size: 1rem;
+      box-sizing: border-box;
+    }
+    .swimmer-block {
+      border: 1px solid #aaa;
+      padding: 1em;
+      margin-top: 1em;
+      border-radius: 6px;
+      background-color: #f9f9f9;
+    }
+    .lap-input-group {
+      margin-top: 1em;
+    }
+    .lap-input-group label {
+      margin-bottom: 0.2em;
+      font-weight: normal;
+    }
+    .formatted-time {
+      display: block;
+      margin-top: 0.2em;
+      color: gray;
+      font-size: 0.9em;
+    }
+    .button-row {
+      margin-top: 1em;
+      display: flex;
+      gap: 0.5em;
+    }
+    .deleteSwimmer {
+      margin-top: 1em;
+      background-color: #f44336;
+      color: white;
+    }
+  </style>
 </head>
 <body>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1576927028314389"
@@ -17,7 +67,7 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-    <h1>これがヘッダー１のサイズ感</h1>
-    <p>これがただ文字、数秒でとりあえずこんな感じでサイト公開できます</p>
+    <h1>旧Watch for Swimming Race ラップ表自動作成ツール</h1>
+    <p>サービス終了したiOS Apps<a href="https://apps.apple.com/jp/app/watch-for-swimming-race/id1480186682">Watch for Swimming Race</a>の代替物を開発しました。水泳に携わる方々は頻繁に使ってらっしゃったと思いますので、今回のサービス終了を受け、ウェブ上で簡単に操作ができる代替物を作成しました。</p>
 </body>
 </html>
