--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -12,62 +13,33 @@
       font-size: 16px;
       line-height: 1.6;
     }
-    label {
+    h2 {
       display: block;
       margin-top: 1em;
       font-weight: bold;
-    }
-    input, select, button {
-      width: 100%;
-      padding: 0.5em;
-      margin-top: 0.3em;
-      font-size: 1rem;
-      box-sizing: border-box;
-    }
-    .swimmer-block {
-      border: 1px solid #aaa;
-      padding: 1em;
-      margin-top: 1em;
-      border-radius: 6px;
-      background-color: #f9f9f9;
-    }
-    .lap-input-group {
-      margin-top: 1em;
-    }
-    .lap-input-group label {
-      margin-bottom: 0.2em;
-      font-weight: normal;
-    }
-    .formatted-time {
-      display: block;
-      margin-top: 0.2em;
-      color: gray;
-      font-size: 0.9em;
-    }
-    .button-row {
-      margin-top: 1em;
-      display: flex;
-      gap: 0.5em;
-    }
-    .deleteSwimmer {
-      margin-top: 1em;
-      background-color: #f44336;
-      color: white;
     }
   </style>
 </head>
 <body>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1576927028314389"
      crossorigin="anonymous"></script>
-<!-- 広告0 -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:90px"
-     data-ad-client="ca-pub-1576927028314389"
-     data-ad-slot="2282838352"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
     <h1>旧Watch for Swimming Race ラップ表自動作成ツール</h1>
-    <p>サービス終了したiOS Apps<a href="https://apps.apple.com/jp/app/watch-for-swimming-race/id1480186682">Watch for Swimming Race</a>の代替物を開発しました。水泳に携わる方々は頻繁に使ってらっしゃったと思いますので、今回のサービス終了を受け、ウェブ上で簡単に操作ができる代替物を作成しました。</p>
+    <p>サービス終了したiOS Apps<a href="https://apps.apple.com/jp/app/watch-for-swimming-race/id1480186682">Watch for Swimming Race</a>の代替ツールです。
+        <br>
+        水泳に携わる方々は頻繁に使ってらっしゃったと思いますので、今回のサービス終了を受け、ウェブ上で簡単に操作ができる代替物を作成しました。
+        <br>
+        不備・改善点等ございましたら<a href="mailto:kumaneko345@gmail.com">kumaneko345@gmail.com</a>までお問い合わせください。
+    </p>
+    <h2>ラップ表作成ツール</h2>
+    <p><a href = "https://dykit-cell.github.io/savecsv.html">こちら</a></p>
+    <p>他にもツールが完成し次第、こちらにリンクを貼っていく予定です。</p>
+    <!-- 広告0 -->
+    <ins class="adsbygoogle"
+    style="display:inline-block;width:728px;height:90px"
+    data-ad-client="ca-pub-1576927028314389"
+    data-ad-slot="2282838352"></ins>
+    <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
 </body>
 </html>
