--- a/savecsv.html
+++ b/savecsv.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1576927028314389"
+    crossorigin="anonymous"></script>
+  <style>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ラップタイム入力フォーム</title>
@@ -30,6 +33,8 @@
   </style>
 </head>
 <body>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1576927028314389"
+     crossorigin="anonymous"></script>
   <h2>ラップタイム入力フォーム（CSVダウンロード版）</h2>
   <form id="lapForm">
     <label>大会名:<input type="text" id="eventName"></label>
@@ -251,6 +256,14 @@
         saveAs(blob, filename);
       });
     });
+  </script>
+  <!-- 広告0 -->
+  <ins class="adsbygoogle"
+    style="display:inline-block;width:728px;height:90px"
+    data-ad-client="ca-pub-1576927028314389"
+    data-ad-slot="2282838352"></ins>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
   </script>
 </body>
 </html>
