--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Githubもっと使えるようになりたい</title>
+    <title>ラップ表作成ツール for Swimming Race</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1576927028314389"
      crossorigin="anonymous"></script>
     <style>
