--- a/savecsv.html
+++ b/savecsv.html
@@ -1,40 +1,67 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1576927028314389"
-    crossorigin="anonymous"></script>
-  <style>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ラップタイム入力フォーム</title>
+  <title>ラップタイム入力フォーム（CSVダウンロード版）</title>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1576927028314389" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/file-saver@2.0.5/dist/FileSaver.min.js"></script>
   <style>
-    body { font-family: sans-serif; padding: 1em; font-size: 16px; }
-    label { display: block; margin-top: 1em; font-weight: bold; }
+    body {
+      font-family: sans-serif;
+      padding: 1em;
+      font-size: 16px;
+      line-height: 1.6;
+      margin: 0;
+    }
+    label {
+      display: block;
+      margin-top: 1em;
+      font-weight: bold;
+    }
     input, select, button {
-      width: 100%; padding: 0.5em; margin-top: 0.3em;
-      font-size: 1rem; box-sizing: border-box;
+      width: 100%;
+      padding: 0.5em;
+      margin-top: 0.3em;
+      font-size: 1rem;
+      box-sizing: border-box;
     }
     .swimmer-block {
-      border: 1px solid #aaa; padding: 1em; margin-top: 1em;
-      border-radius: 6px; background-color: #f9f9f9;
+      border: 1px solid #aaa;
+      padding: 1em;
+      margin-top: 1em;
+      border-radius: 6px;
+      background-color: #f9f9f9;
     }
-    .lap-input-group { margin-top: 1em; }
+    .lap-input-group {
+      margin-top: 1em;
+    }
+    .lap-input-group label {
+      font-weight: normal;
+    }
     .formatted-time {
-      display: block; margin-top: 0.2em;
-      color: gray; font-size: 0.9em;
+      display: block;
+      margin-top: 0.2em;
+      color: gray;
+      font-size: 0.9em;
     }
     .button-row {
-      margin-top: 1em; display: flex; gap: 0.5em;
+      margin-top: 1em;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.5em;
+    }
+    .button-row button {
+      flex: 1 1 45%;
     }
     .deleteSwimmer {
-      margin-top: 1em; background-color: #f44336; color: white;
+      margin-top: 1em;
+      background-color: #f44336;
+      color: white;
     }
   </style>
 </head>
 <body>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1576927028314389"
-     crossorigin="anonymous"></script>
   <h2>ラップタイム入力フォーム（CSVダウンロード版）</h2>
   <form id="lapForm">
     <label>大会名:<input type="text" id="eventName"></label>
@@ -256,5 +283,14 @@
       });
     });
   </script>
+  <!-- 広告ユニット -->
+  <ins class="adsbygoogle"
+       style="display:block; text-align:center; margin-bottom: 1em;"
+       data-ad-client="ca-pub-1576927028314389"
+       data-ad-slot="2282838352"
+       data-ad-format="auto"
+       data-full-width-responsive="true"></ins>
+  <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+<body>
 </body>
 </html>
